{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 304,
  "lineage": "a33f10bb-f5b1-6588-cf97-4a69c4f9ab20",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "adc_alteon_data_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3121",
                  "2222",
                  "443",
                  "8443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-08-26T02:09:12.738-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/radware-alteon/global/firewalls/alteon-data-sg-default",
            "log_config": [],
            "name": "alteon-data-sg-default",
            "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-data-vpc-default",
            "priority": 1000,
            "project": "radware-alteon",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/firewalls/alteon-data-sg-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.adc_data_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "adc_alteon_mgmt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3121",
                  "2222",
                  "443",
                  "8443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-08-26T02:09:13.196-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/radware-alteon/global/firewalls/alteon-mgmt-sg-default",
            "log_config": [],
            "name": "alteon-mgmt-sg-default",
            "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-mgmt-vpc-default",
            "priority": 1000,
            "project": "radware-alteon",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/firewalls/alteon-mgmt-sg-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.adc_mgmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "adc_alteon_servers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3121",
                  "2222",
                  "443",
                  "8443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-08-26T02:09:22.859-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/radware-alteon/global/firewalls/alteon-servers-sg-default",
            "log_config": [],
            "name": "alteon-servers-sg-default",
            "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-servers-vpc-default",
            "priority": 1000,
            "project": "radware-alteon",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/firewalls/alteon-servers-sg-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.adc_servers_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "adc_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/images/alteon-os-ubuntu18-5-ndebug-gcp",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 12,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/radware-alteon/zones/us-central1-a/disks/adc-instance-default"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "enable_display": false,
            "id": "projects/radware-alteon/zones/us-central1-a/instances/adc-instance-default",
            "instance_id": "1182094398748489918",
            "label_fingerprint": "u__a2NSF3Cs=",
            "labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "e2-highcpu-4",
            "metadata": {
              "user-data": "Initial provisioning. Instance will be updated and started."
            },
            "metadata_fingerprint": "PyEDdn3CFNw=",
            "name": "adc-instance-default",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.181.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-mgmt-vpc-default",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/radware-alteon/regions/us-central1/subnetworks/adc-mgmt-subnet-default",
                "subnetwork_project": "radware-alteon"
              },
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-data-vpc-default",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/radware-alteon/regions/us-central1/subnetworks/adc-data-subnet-default",
                "subnetwork_project": "radware-alteon"
              },
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-servers-vpc-default",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/radware-alteon/regions/us-central1/subnetworks/adc-servers-subnet-default",
                "subnetwork_project": "radware-alteon"
              }
            ],
            "project": "radware-alteon",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/zones/us-central1-a/instances/adc-instance-default",
            "service_account": [
              {
                "email": "591546275183-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "adc-instance"
            ],
            "tags_fingerprint": "-7evfq3OJls=",
            "terraform_labels": {
              "goog-ec-src": "vm_add-tf"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.adc_data_vpc",
            "google_compute_network.adc_mgmt_vpc",
            "google_compute_network.adc_servers_vpc",
            "google_compute_subnetwork.adc_data_subnet",
            "google_compute_subnetwork.adc_mgmt_subnet",
            "google_compute_subnetwork.adc_servers_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "adc_data_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/radware-alteon/global/networks/adc-data-vpc-default",
            "mtu": 0,
            "name": "adc-data-vpc-default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6299727564644677826",
            "project": "radware-alteon",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-data-vpc-default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "adc_mgmt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/radware-alteon/global/networks/adc-mgmt-vpc-default",
            "mtu": 0,
            "name": "adc-mgmt-vpc-default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2762294136318064834",
            "project": "radware-alteon",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-mgmt-vpc-default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "adc_servers_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/radware-alteon/global/networks/adc-servers-vpc-default",
            "mtu": 0,
            "name": "adc-servers-vpc-default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1943309646100035779",
            "project": "radware-alteon",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-servers-vpc-default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "adc_data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-26T02:09:13.315-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/radware-alteon/regions/us-central1/subnetworks/adc-data-subnet-default",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "adc-data-subnet-default",
            "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-data-vpc-default",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "radware-alteon",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/regions/us-central1/subnetworks/adc-data-subnet-default",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.adc_data_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "adc_mgmt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-26T02:09:13.426-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/radware-alteon/regions/us-central1/subnetworks/adc-mgmt-subnet-default",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "adc-mgmt-subnet-default",
            "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-mgmt-vpc-default",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "radware-alteon",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/regions/us-central1/subnetworks/adc-mgmt-subnet-default",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.adc_mgmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "adc_servers_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-26T02:09:22.973-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/radware-alteon/regions/us-central1/subnetworks/adc-servers-subnet-default",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "adc-servers-subnet-default",
            "network": "https://www.googleapis.com/compute/v1/projects/radware-alteon/global/networks/adc-servers-vpc-default",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "radware-alteon",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/radware-alteon/regions/us-central1/subnetworks/adc-servers-subnet-default",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.adc_servers_vpc"
          ]
        }
      ]
    }
  ]
}